[project]
name = "overshoot-vision-agent"
version = "0.1.0"
description = "Real-time vision agent for LiveKit rooms, powered by Overshoot's sub-200ms VLM inference"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents>=1.0",
    "livekit-api>=1.0",
    "openai>=1.60",
    "httpx>=0.27",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
rtsp = ["av>=13.0"]

[tool.uv]
package = false
